<resources>
    <string name="app_name">Madlibs</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="welcome">Welcome to</string>
    <string name="buttonstart">Click here to begin your adventure!</string>
    <string name="title_activity_choosestory">Choosestory</string>
    <string name="choose">Choose your story wisely</string>
    <string name="begin">Begin your Story!</string>
    <string name="tarzan">The story of Tarzan</string>
    <string name="simple">A simple story</string>
    <string name="university">A story about a university</string>
    <string name="clothes">A story about clothes</string>
    <string name="dance">For the dancers</string>
    <string name ="errorstory">First select a story smart guy!</string>
    <string name="title_activity_inputstory">Inputstory</string>
    <string name="title_activity_storyteller">Storyteller</string>
    <string name="errorinput">Please enter valid letters</string>
    <string name="inputword">Please enter a word for your story!</string>
    <string name = "placeholders">Placeholder:</string>
    <string name= "placeholderscount">Words left:</string>
    <string name="landfaraway">In a land far far away there was a...</string>
    <string name="restart">Restart the game yo!</string>
    <string name="explaination">Welcome to Mad Libs! I will ask you to fill in words
        to complete a story. You won\'t be able to see the whole story until
        you are done filling in all the missing words. That\'s part of the fun!
        Click below to get started...</string>
</resources>
